--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,10 @@
         "laravel/framework": "^12.0",
         "laravel/octane": "^2.12",
         "laravel/sanctum": "^4.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "spatie/laravel-permission": "^6.21",
+        "spiral/roadrunner-cli": "2.6",
+        "spiral/roadrunner-http": "3.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
